# Bike-LLM

./: .gitignore  docker-compose.yml
bike_neo4j_etl/: pyproject.toml
bike_neo4j_etl/src/: bike_bulk_csv_write.py  entrypoint.sh
chatbot_api/: Dockerfile  pyproject.toml
chatbot_api/src/: main.py
chatbot_api/src/agents/: bike_rag_agent.py
chatbot_api/src/auth/: dependency.py  helpers.py
chatbot_api/src/chains/: bike_cypher_chain.py  customer_chain.py
chatbot_api/src/models/: bike_rag_query.py
chatbot_api/src/routers/: chat_router.py  user_router.py
chatbot_api/src/tools/: bike_tools.py  db_user.py
chatbot_api/src/utils/: auth_utils.py
chatbot_frontend/: pyproject.toml
chatbot_frontend/src/: main.py
data/: CustomerList.csv  Products.csv  Transaction3.csv  Transactions.csv  Transactions_cleaned.csv  Transactions_cleaned2.csv  test.py
